[tool.poetry]
name = "find_domains"
version = "0.1.0"
description = ""
authors = ["dsmakov <smackovdinislam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
Django = "^3.2.9"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
